--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "primeicons": "^4.1.0",
+    "primevue": "^2.4.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
