--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "*.{js,vue}": "eslint"
   },
   "dependencies": {
+    "@nuxtjs/firebase": "^7.6.1",
     "core-js": "^3.15.1",
     "firebase": "^8.8.0",
     "nuxt": "^2.15.7",
