--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
+    "firebase": "^8.8.0",
     "nuxt": "^2.15.7",
     "primeicons": "^4.1.0",
     "primevue": "^2.4.2"
