--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "postcss": "^8.3.5",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "^5.0.6",
+    "postcss-nested-props": "^2.0.0",
     "prettier": "^2.3.2"
   }
 }
