--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/firebase": "^7.6.1",
     "core-js": "^3.15.1",
     "firebase": "^8.8.0",
+    "mitt": "^3.0.0",
     "nuxt": "^2.15.7",
     "primeicons": "^4.1.0",
     "primevue": "^2.4.2"
