--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "*.{js,vue}": "eslint"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
     "@nuxtjs/date-fns": "^1.5.0",
     "@nuxtjs/firebase": "^7.6.1",
     "core-js": "^3.15.1",
