--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdi/font": "^5.9.55",
     "@nuxtjs/date-fns": "^1.5.0",
     "@nuxtjs/firebase": "^7.6.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.15.1",
     "firebase": "^8.8.0",
     "mitt": "^3.0.0",
